--- a/weather.css
+++ b/weather.css
@@ -254,7 +254,7 @@ li {
 
 
 .locations-items button {
-  background: url(/details-1/img/close-icon.svg);
+  background: url(/img/close-icon.svg);
   border: 0;
   padding-right: 25px;
   background-repeat: no-repeat;
