--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,7 +31,7 @@ html, body {
     flex-direction: row;
     justify-content: space-between;
     width: 350px;
-    margin-top: 130px;
+    margin-top: 120px;
     background-color: inherit;
 }
 .enter-date:focus {
@@ -56,7 +56,7 @@ html, body {
     inset rgba(255,255,255,.9) 3px 3px 8px,
     rgba(0, 98, 163,.8) 3px 3px 8px -3px;
 }
-.btn-start {
+.btn {
     width: 80px;
     height: 30px;
     color: rgb(4, 52, 74);
@@ -73,7 +73,7 @@ html, body {
     inset rgba(255,255,255,.9) 3px 3px 8px,
     rgba(0, 98, 163,.8) 3px 3px 8px -3px;
 }
-.btn-start:hover:not(:disabled) {
+.btn:hover:not(:disabled) {
     background: rgb(113, 193, 230) radial-gradient(circle at 0 0, rgba(151, 206, 232, 0.55), rgba(151, 206, 232,.35));
     box-shadow:
     inset rgba(0, 98, 163,.5) -3px -3px 8px,
@@ -83,7 +83,7 @@ html, body {
     0 0 50px #A42FED,
     0 0 100px #E024ED;
 }
-.btn-start:active:not(:disabled) {
+.btn:active:not(:disabled) {
     scale: .95;
 }
 .count-down {
@@ -96,6 +96,7 @@ html, body {
 }
 .text-inform {
     font-size: 21px;
+    font-weight: 700;
     color: rgb(4, 67, 96);
     opacity: 0;
     transition: opacity .5s ease-in-out;
@@ -131,4 +132,73 @@ html, body {
 }
 .date-count-down.active {
     opacity: 1;
+}
+.btn-clear {
+    margin-top: 35px;
+    background: rgb(113, 193, 230) radial-gradient(circle at 0 0, rgba(57, 136, 172, 0.55), rgba(26, 162, 225, 0.35));
+    box-shadow:
+    inset rgba(0, 98, 163,.5) -3px -3px 8px,
+    inset rgba(255,255,255,.9) 3px 3px 8px,
+    rgba(0, 98, 163,.8) 3px 3px 8px -3px;
+
+}
+
+.pop_up {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: transparent;
+    z-index: 2;
+    transform: translateY(-50%) scale(0);
+    transition: 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.pop_up.pop-up-active {
+    transform: translateY(0%) scale(100%);
+    background-color: rgb( 65, 65, 65, .9);
+}
+.pop_container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+.pop_up_body {
+    text-align: center;
+    position: relative;
+    width: 80%;
+    max-width: 550px;
+    margin: 1em auto;
+    margin-top: 280px;
+    padding: 1em;
+    border-radius: 5px;
+    background: rgb(100,100,100) radial-gradient(circle at 0 0, rgba(255, 255, 255, .55), rgba(255,255,255,.35));
+    box-shadow:
+     inset rgba(0,0,0,.5) -3px -3px 8px,
+     inset rgba(255,255,255,.9) 3px 3px 8px,
+     rgba(0,0,0,.8) 3px 3px 8px -3px;
+}
+.pop_up_close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 15px;
+    background-color: transparent;
+    cursor: pointer;
+}
+.pop_up_close:hover { 
+    background-color: rgb(183, 183, 183);
+}
+.pop_up_close:active {
+    background-color: rgb(255, 99, 71, 1.1);
+}
+.error_text {
+    font-size: 24px;
+    color: red;
 }
