--- a/src/css/build.css
+++ b/src/css/build.css
@@ -262,7 +262,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #f2f2f2;
+  background-color: #F2F2F2;
   display: flex;
   justify-content: space-between;
   align-items: center;
