--- a/main.css
+++ b/main.css
@@ -24,6 +24,9 @@ body {
 }
 .input {
   border: 1px solid #000000;
+
+  padding: 8px;
+  margin-right: 2px;
 }
 .btn {
   border: 1px solid #000000;
@@ -43,14 +46,13 @@ body {
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  justify-content: end;
-  align-items: flex-start;
+  justify-content: start;
 }
 
 .message {
   background-color: #f7f7f7;
-  padding: 8px;
   margin-bottom: 8px;
+  padding: 8px;
 }
 .main__message-own {
   align-self: flex-end;
@@ -75,6 +77,59 @@ body {
 }
 .form-message__input {
   min-width: 267px;
-  padding: 8px;
-  margin-right: 2px;
+}
+
+.popup {
+  position: absolute;
+  display: none;
+  width: 321px;
+  height: 533px;
+  background-color: #535353;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -8px;
+  margin-left: -7px;
+}
+
+.popup__inner {
+  width: 273px;
+  height: 319px;
+  border: 1px solid #000;
+  padding: 12px;
+  background-color: #fff;
+}
+
+.popup--active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup__top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.popup__title {
+  font-weight: 400;
+}
+
+.popup .popup__title {
+  margin-bottom: 8px;
+}
+
+.popup .chat__input {
+  width: 209px;
+}
+
+.popup__button {
+  font-size: 24px;
+  line-height: 70%;
+  color: #000000;
+  opacity: 0.45;
+  transform: rotate(-45deg);
+  background-color: transparent;
+  margin-top: -9px;
 }
