--- a/src/sass/_default.sass
+++ b/src/sass/_default.sass
@@ -3,6 +3,9 @@
   padding: 0
   margin: 0
   font-family: 'Roboto', sans-serif
+  scrollbar-width: thin
+  scrollbar-color: blue orange
+
 
 body
   height: 100vh
@@ -10,4 +13,17 @@ body
   justify-content: center
   align-items: center
 
+*::-webkit-scrollbar
+  width: 8px            /* ширина scrollbar */
+
+*::-webkit-scrollbar-track
+  background: rgba(255, 165, 0, 0)
+/* цвет дорожки */
+
+*::-webkit-scrollbar-thumb
+  background-color: rgba(0, 0, 0, 0.36)
+  /* цвет плашки */
+  border-radius: 20px   /* закругления плашки */
+  border: 2px solid white
+/* padding вокруг плашки */
 
