--- a/danis/style.css
+++ b/danis/style.css
@@ -79,7 +79,7 @@
     flex: 0 0 80%;
 }
 
-.message_item {
+.message_container {
     background-color: #F7F7F7;
     padding: 1rem;
     width: fit-content;
@@ -94,4 +94,50 @@
     font-size: 0.875rem;
     color: #333333;
     text-align: right;
+}
+
+.user_message {
+    margin-left: auto;
+}
+
+.autorization__block,
+.input__block {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    border: 1px solid #000;
+    padding: 1rem;
+}
+
+.autorization__block-head, 
+.input__block-head {
+    display: flex;
+    justify-content: space-between;
+}
+
+.autorization__block-container,
+.input__block-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 3rem;
+}
+
+.autorization__block-main,
+.input__block-main {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+}
+
+.autorization__form,
+.input__form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.input__block {
+    display: none;
 }
