--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,12 @@ body {
 	margin: 0px 8px 0px 8px;
 }
 
+.authorization{
+	border: 1px solid;
+	padding: 6px 8px 7px 8px;
+	height: 32px;
+}
+
 .exit {
 	box-sizing:border-box;
 	border: 1px solid;
@@ -146,9 +152,9 @@ body {
 }
 
 
-/* -------POPUP------------------------------------------------ */
+/* -------POPUP__SETINGS------------------------------------------------ */
 
-.popup {
+.popup__setings {
 	position: fixed;
 	width: 321px;
 	height: 533px;
@@ -158,26 +164,26 @@ body {
 	transition: all 0.8s ease 0s;
 }
 
-.popup.open {
+.popup__setings.open {
 	opacity: 1;
 	visibility: visible;
 	transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
 }
 
-.popup__body {
+.popup__setings__body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	min-height: 100%;
 }
 
-.popup__content {
+.popup__setings__content {
 	width: 273px;
 	height: 319px;
 	background-color: #ffffff;
 }
 
-.popup__button__exit {
+.popup__setings__button__exit {
 	margin-top: 13px;
 	margin-left: 241px;
 	font-size: 24px;
@@ -187,30 +193,170 @@ body {
     transform: rotate(-45deg);
 }
 
-.popup__form {
+.popup__setings__form {
 	margin-left: 14px;
 	margin-top: 8px;
 }
 
-.popup__input {
+.popup__setings__input {
 	padding-left: 8px;
 	border: 1px solid #000000;
 	width: 207px;
 	height: 32px;
 }
 
-.popup_title {
+.popup__setings_title {
 	margin-top: -16px;
 	margin-left: 14px;
 }
 
-.popup_name__chat {
+.popup__setings_name__chat {
 	margin-top: 16px;
 	margin-left: 14px;
 }
 
-.popup__button {
+.popup__setings__button {
 	border: 1px solid #000000;
 	width: 30px;
 	height: 32px;
+}
+
+/* -------POPUP__Authorization------------------------------------------------ */
+
+.popup__authorization {
+	position: fixed;
+	width: 321px;
+	height: 533px;
+	background-color: #535353;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.8s ease 0s;
+}
+
+.popup__authorization.open {
+	opacity: 1;
+	visibility: visible;
+	transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+}
+
+.popup__authorization__body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100%;
+}
+
+.popup__authorization__content {
+	width: 273px;
+	height: 319px;
+	background-color: #ffffff;
+}
+
+.popup__authorization__button__exit {
+	margin-top: 13px;
+	margin-left: 241px;
+	font-size: 24px;
+    line-height: 70%;
+    color: #000000;
+    opacity: 0.45;
+    transform: rotate(-45deg);
+}
+
+.popup__authorization__form {
+	margin-left: 14px;
+	margin-top: 8px;
+}
+
+.popup__authorization__input {
+	padding-left: 8px;
+	border: 1px solid #000000;
+	width: 207px;
+	height: 32px;
+}
+
+.popup__authorization_title {
+	margin-top: -16px;
+	margin-left: 14px;
+}
+
+.popup__authorization_gmail {
+	margin-top: 70px;
+	margin-left: 14px;
+}
+
+.popup__authorization__button {
+	border: 1px solid #000000;
+	margin-top: 7px;
+	width: 120px;
+	height: 34px;
+}
+
+/* -------POPUP__Confirmation------------------------------------------------ */
+
+.popup__confirmation {
+	position: fixed;
+	width: 321px;
+	height: 533px;
+	background-color: #535353;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.8s ease 0s;
+}
+
+.popup__confirmation.open {
+	opacity: 1;
+	visibility: visible;
+	transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+}
+
+.popup__confirmation__body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100%;
+}
+
+.popup__confirmation__content {
+	width: 273px;
+	height: 319px;
+	background-color: #ffffff;
+}
+
+.popup__confirmation__button__exit {
+	margin-top: 13px;
+	margin-left: 241px;
+	font-size: 24px;
+    line-height: 70%;
+    color: #000000;
+    opacity: 0.45;
+    transform: rotate(-45deg);
+}
+
+.popup__confirmation__form {
+	margin-left: 14px;
+	margin-top: 8px;
+}
+
+.popup__confirmation__input {
+	padding-left: 8px;
+	border: 1px solid #000000;
+	width: 207px;
+	height: 32px;
+}
+
+.popup__confirmation_title {
+	margin-top: -16px;
+	margin-left: 14px;
+}
+
+.popup__confirmation_gmail {
+	margin-top: 70px;
+	margin-left: 14px;
+}
+
+.popup__confirmation__button {
+	border: 1px solid #000000;
+	margin-top: 7px;
+	width: 62px;
+	height: 34px;
 }
