--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,8 +4,6 @@
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
-  scrollbar-width: thin;
-  scrollbar-color: blue orange;
 }
 
 body {
@@ -46,6 +44,7 @@ body {
   margin-bottom: 10px;
 }
 .chat__settings {
+  transition: color 0.6s;
   cursor: pointer;
   width: 100px;
   height: 32px;
@@ -54,7 +53,12 @@ body {
   justify-content: center;
   align-items: center;
 }
+.chat__settings:hover {
+  border: 1px solid rgba(61, 97, 239, 0.7);
+  color: rgba(61, 97, 239, 0.7);
+}
 .chat__exit {
+  transition: color 0.6s;
   cursor: pointer;
   width: 100px;
   height: 32px;
@@ -62,6 +66,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.chat__exit:hover {
+  border: 1px solid rgba(239, 61, 78, 0.7);
+  color: rgba(239, 61, 78, 0.7);
 }
 .chat__main {
   overflow-y: auto;
@@ -85,10 +93,15 @@ body {
   width: 100%;
 }
 .chat-form__button {
+  transition: color 0.6s;
   border: 1px solid black;
   background-color: white;
   height: 32px;
-  width: 36px;
+  min-width: 36px;
+}
+.chat-form__button:hover {
+  border: 1px solid rgba(80, 201, 103, 0.8);
+  color: rgba(80, 201, 103, 0.8);
 }
 
 .massage {
@@ -132,10 +145,11 @@ body {
   align-items: center;
 }
 .modal__content {
+  text-align: center;
   max-width: 500px;
   position: relative;
   width: 100%;
-  padding: 20px 40px 40px 40px;
+  padding: 10px 60px 60px 60px;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -143,9 +157,9 @@ body {
   overflow-y: auto;
 }
 .modal__header {
-  font-style: italic;
+  color: rgba(0, 0, 0, 0.45);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-end;
   margin-bottom: 30px;
 }
@@ -154,6 +168,7 @@ body {
   margin-bottom: 10px;
 }
 .modal__close {
+  transition: transform 0.5s;
   position: absolute;
   top: 0;
   right: 13px;
@@ -165,6 +180,9 @@ body {
   background-color: transparent;
   cursor: pointer;
 }
+.modal__close:hover {
+  transform: rotate(45deg);
+}
 
 .hide {
   display: none;
@@ -172,6 +190,30 @@ body {
 
 .show {
   display: flex;
+}
+
+.modal-form__label {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.modal-form__input {
+  border: 1px solid black;
+  padding-left: 5px;
+  padding-right: 5px;
+  min-height: 32px;
+  width: 100%;
+}
+.modal-form__button {
+  transition: background-color 0.5s;
+  cursor: pointer;
+  border: 1px solid black;
+  background-color: white;
+  height: 32px;
+  min-width: 36px;
+}
+.modal-form__button:hover {
+  background-color: rgba(80, 201, 103, 0.8);
 }
 
 /*# sourceMappingURL=index.css.map */
