--- a/src/sass/_chat.sass
+++ b/src/sass/_chat.sass
@@ -10,6 +10,7 @@
     justify-content: space-between
     margin-bottom: 10px
   &__settings
+    transition: color 0.6s
     cursor: pointer
     width: 100px
     height: 32px
@@ -17,7 +18,11 @@
     display: flex
     justify-content: center
     align-items: center
+    &:hover
+      border: 1px solid rgba(61, 97, 239, 0.7)
+      color: rgba(61, 97, 239, 0.7)
   &__exit
+    transition: color 0.6s
     cursor: pointer
     width: 100px
     height: 32px
@@ -25,6 +30,9 @@
     display: flex
     justify-content: center
     align-items: center
+    &:hover
+      border: 1px solid rgba(239, 61, 78, 0.7)
+      color: rgba(239, 61, 78, 0.7)
   &__main
     overflow-y: auto
     display: flex
@@ -45,7 +53,13 @@
     min-height: 32px
     width: 100%
   &__button
+    transition: color 0.6s
     border: 1px solid black
     background-color: white
     height: 32px
-    width: 36px
+    min-width: 36px
+    &:hover
+      border: 1px solid  rgba(80, 201, 103, 0.8)
+      color:  rgba(80, 201, 103, 0.8)
+
+
