--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -10,25 +10,27 @@
   justify-content: center
   align-items: center
   &__content
+    text-align: center
     max-width: 500px
     position: relative
     width: 100%
-    padding: 20px 40px 40px 40px
+    padding: 10px 60px 60px 60px
     background-color: #fff
     border: 1px solid rgba(0, 0, 0, 0.2)
     border-radius: 4px
     max-height: 80vh
     overflow-y: auto
   &__header
-    font-style: italic
+    color: rgba(0, 0, 0, 0.45)
     display: flex
-    justify-content: space-between
+    justify-content: space-around
     align-items: flex-end
     margin-bottom: 30px
   &__text
     font-size: 20px
     margin-bottom: 10px
   &__close
+    transition: transform 0.5s
     position: absolute
     top: 0
     right: 13px
@@ -39,8 +41,33 @@
     border: none
     background-color: transparent
     cursor: pointer
+    &:hover
+      transform: rotate(45deg)
 .hide
   display: none
 
 .show
   display: flex
+
+.modal-form
+  &__label
+    display: flex
+    flex-direction: column
+    gap: 15px
+  &__input
+    border: 1px solid black
+    padding-left: 5px
+    padding-right: 5px
+    min-height: 32px
+    width: 100%
+  &__button
+    transition: background-color 0.5s
+    cursor: pointer
+    border: 1px solid black
+    background-color: white
+    height: 32px
+    min-width: 36px
+
+    &:hover
+      background-color: rgba(80, 201, 103, 0.8)
+
