--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,55 @@
 @import "../node_modules/normalize.css/normalize.css";
+
+.container {
+    position: relative;
+    height: 533px;
+    width: 320px;
+    padding: 8px;
+}
+
+.wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+}
+.nav__button {
+    height: 32px;
+    border: 1px solid #000000;
+}
+
+.chat {
+    border: 1px solid #000000;
+    height: 437px;
+}
+
+.message {
+    display: flex;
+    justify-content: space-between;
+}
+
+.text {
+    border: 1px solid #000000;
+    width: 100%;
+    margin-right: 8px;
+}
+
+.container_color {
+    background: #535353;
+}
+
+.sett {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 273px;
+    height: 319px;
+    background: white;
+    padding: 16px;
+}
