--- a/d33sf0me/chat/style.css
+++ b/d33sf0me/chat/style.css
@@ -74,15 +74,16 @@ h1 {
 }
 
 .messagesArea {
+    word-break: break-word;
+    overflow-y: scroll;
+    scroll-snap-align:center;
     border-radius: 4px;
     border: 1px solid #000;
-    background-color: #fff;
     width: 285px;
     height: 417px;
     margin: 0 8px 8px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
     padding: 8px;
 }
 
@@ -131,6 +132,7 @@ h3 {
 }
 
 .message__inner {
+    
     background-color: #E5E5E5;
     padding: 8px;
 }
@@ -140,6 +142,7 @@ h3 {
 }
 
 .message__text {
+    
     margin-bottom: 4px;
 }
 
@@ -191,10 +194,6 @@ h3 {
     margin-bottom: 8px;
 }
 
-.popup .chat__input {
-    width: 196px;
-}
-
 .popup__button {
     font-size: 24px;
     line-height: 70%;
@@ -206,6 +205,12 @@ h3 {
     cursor: pointer;;
 }
 
-form#ChatName {
+.ChatName {
+    height: 28px;
+    width: 196px;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.189);
+    background-color: #fff;
+    margin-right: 8px;
     margin: 0px;
   }
