--- a/Chat/style/style.css
+++ b/Chat/style/style.css
@@ -18,7 +18,7 @@
 html body{
     width: 100%;
     height: 100%;
-    background-image: url("img/background.jpg");
+    background-image: url("../img/background.jpg");
 }
 
 .container{
@@ -92,39 +92,70 @@ input {
     text-indent: 10px;
 }
 
-
-.content-message{
+.flex-end{
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
     height: 100%;
+
+}
+.content-message{
+    width: 100%;
     overflow-y: scroll;
 }
 
 .interlocutor{
-    max-width: 220px;
+    /*max-width: 220px;*/
     background-color: #E5E5E5;
     margin-bottom: 8px;
     padding: 8px;
     margin-right: 30%;
-
 }
 
 .flex-me-end{
     display: flex;
     justify-content: end;
     align-items: end;
+    margin-left: 30%;
 }
 
+.user-span-message{
+    word-break: break-all;
+}
 .me{
-    max-width: 220px;
+
     background-color: #F7F7F7;
     padding: 8px;
+    text-wrap: revert;
     margin-bottom: 8px;
-
+    margin-right: 15px;
+}
+.no-select{
+    color: #555;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.date-me{
+    color: #737373;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    font-size: 13px;
+    margin-top: 5px;
 }
 
+.date-interlocutor{
+    color: #737373;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    font-size: 13px;
+    margin-top: 5px;
+}
 
 /* popupSetting  */
 
@@ -136,15 +167,15 @@ input {
     height: 100%;
     background: rgba(0,0,0,0.5);
     opacity: 0;
+    /*display: none;*/
     pointer-events: none;
     transition: 0.5s all;
-
-
 }
 
 .popup__bg.active {
     opacity: 1;
-
+    z-index: 5;
+    /*display: block;*/
     pointer-events: all;
     transition: 0.5s all;
 }
@@ -195,7 +226,8 @@ input {
 #form-popup{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    /*align-items: center;*/
     padding: 8px;
 }
 
@@ -212,5 +244,30 @@ input {
     height: 32px;
     cursor: pointer;
     font-size: 16px;
+    margin-top: 8px;
+}
 
+.chat{
+    opacity: 0;
+    /*display: none;*/
+    pointer-events: none;
+    transition: 0.5s all;
+}
+
+.chat{
+    opacity: 0;
+    /*display: none;*/
+    pointer-events: none;
+    transition: 0.5s all;
+}
+
+.chat.active{
+    opacity: 1;
+    pointer-events: all;
+    transition: 0.5s all;
+}
+
+
+.container.active{
+    z-index: 4;
 }
