--- a/danis/style.css
+++ b/danis/style.css
@@ -2,13 +2,20 @@
     width: 30rem;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
     gap: 1rem;
-    border: 1px solid #000;
     justify-content: space-between;
     margin: 0 auto;
     margin-top: 10rem;
     position: relative;
+}
+
+.chat__block {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    display: none;
+    border: 1px solid #000;
+    padding: 1rem;
 }
 
 .hero__block-buttons-head {
@@ -87,7 +94,7 @@
 }
 
 .hero__block_window-chat .message_item:nth-last-child(odd) {
-    margin-left: auto; 
+    margin-left: auto;
 }
 
 .message_time {
@@ -110,7 +117,7 @@
     padding: 1rem;
 }
 
-.autorization__block-head, 
+.autorization__block-head,
 .input__block-head {
     display: flex;
     justify-content: space-between;
