--- a/chat/scss/_access.scss
+++ b/chat/scss/_access.scss
@@ -1,4 +1,4 @@
-.modal {
+.access {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -11,7 +11,7 @@
 	justify-content: center;
 	align-items: center;
 
-	&__settings {
+	&__auth {
 		width: 273px;
 		height: 319px;
 
@@ -30,7 +30,7 @@
 
 		img {
 			width: 14px;
-			height: 20.82px;
+			height: 14px;
 
 			cursor: pointer;
 
@@ -49,23 +49,19 @@
 
 	&__form {
 		display: flex;
-		align-items: center;
+		flex-direction: column;
+		align-items: flex-start;
 		margin: 0 14px;
 
 		input {
-			width: 207px;
+			width: 100%;
 			height: 32px;
-
-			margin-right: 10px;
+			padding-left: 5px;
 		}
 
 		button {
-			width: 30px;
-			height: 32px;
-
-			padding-top: 3px;
-			padding-left: 3px;
-
+			margin-top: 8px;
+			padding: 5px;
 			background: #ffffff;
 			border: 1px solid #000000;
 			border-radius: 2px;
