--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,13 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
     height: 440px;
+    -ms-overflow-style: none;
+        scrollbar-width: none;
+}
+
+.message-screen::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 .message-list {
