--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,20 @@ body {
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, .7);
+    font-size: 16px;
+
+}
+
+.settings,
+.confirm  {
     display: none;
+}
+
+.confirm .user-field,
+.authorization .user-field{
+    margin-bottom: 10px;
+    margin-right: 0;
+    width: 100%;
 }
 
 .popup-wrapper {
@@ -148,7 +161,6 @@ body {
 }
 
 .popup-label {
-
     margin-bottom: 16px;
     width: 100%;
     flex: 3;
