Добавляет загрузку истории сообщений

--- a/chat/styles/reboot.css
+++ b/chat/styles/reboot.css
@@ -17,9 +17,12 @@
   --default-red-lighter-color: #ff907c;
   --default-red-darker-color: #f04e31;
   --additional-color: #5c8ab2;
+  --additional-pale-color: #c8e3fb;
   --additional-lighter-color: #6994ba;
+  --additional-medium-color: #2b70ac;
   --additional-darker-color: #265681;
   --bright-color: #39b54a;
+  --bright-pale-color: #9cf595;
   --bright-lighter-color: #56cf4c;
   --bright-darker-color: #208b44;
   --additional-bright-color: #9edcff;
