--- a/danis/style.css
+++ b/danis/style.css
@@ -122,6 +122,7 @@
     transform: translateX(-50%) translateY(-50%);
     border: 1px solid #000;
     padding: 1rem;
+    display: none;
 }
 
 .autorization__block-head,
