--- a/main.css
+++ b/main.css
@@ -45,6 +45,7 @@ body {
   display: flex;
   flex-direction: column-reverse;
   overflow-y: scroll;
+  overflow-x: hidden;
   justify-content: end;
 }
 
