--- a/src/sass/_chat.sass
+++ b/src/sass/_chat.sass
@@ -34,7 +34,7 @@
       border: 1px solid rgba(239, 61, 78, 0.7)
       color: rgba(239, 61, 78, 0.7)
   &__main
-    overflow-y: auto
+    overflow-x: hidden
     display: flex
     flex-direction: column-reverse
     padding: 10px
