--- a/d33sf0me/chat/style.css
+++ b/d33sf0me/chat/style.css
@@ -19,7 +19,6 @@ body {
   margin: 0 auto;
   border: 10px;
   border-color: black;
-  
 }
 .box {
   width: 320px;
@@ -85,6 +84,7 @@ h1 {
     display: flex;
     flex-direction: column;
     padding: 8px;
+    font-size: 14px;
 }
 
 .chat__form {
@@ -129,6 +129,7 @@ h3 {
 
 .message--interlocutor {
     justify-content: start;
+    
 }
 
 .message__inner {
@@ -148,7 +149,7 @@ h3 {
 
 .message__time {
     font-weight: 300;
-    font-size: 14px;
+    font-size: 11px;
     line-height: 16px;
     display: flex;
     justify-content: end;
@@ -156,28 +157,28 @@ h3 {
 
 .popup {
     position: absolute;
-    top: 8px; 
-    display: none;
-    background-color: #535353a3;
-    width: 320px;
-    height: 535px;
-    border-radius: 10px;
-    border: none;
-}
-
-.popup__inner {
-    width: 249px;
-    height: 319px;
-    border: 1px solid #000;
-    border-radius: 10px;
-    padding: 12px;
-    background-color: #fff;
+    top: 0;
+    left: 252;
+    width: 322px;
+    height: 551px;
+    background-color: #535353b8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .popup--active {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.popup__inner {
+    width: 249px;
+    height: 319px;
+    border: 1px solid #000;
+    padding: 12px;
+    background-color: #fff;
 }
 
 .popup__top {
@@ -190,11 +191,32 @@ h3 {
     font-weight: 400;
 }
 
-.popup .popup__title {
+.popup__input-title {
+    font-weight: 400;
     margin-bottom: 8px;
 }
 
+.popup .chat__input {
+    width: 196px;
+}
+
+.popup__input {
+    max-height: 108px;
+    padding: 5px 6px 6px 6px;
+    border: 1px solid #000;
+    width: 231px;
+    margin-bottom: 7px;
+}
+
 .popup__button {
+    height: 32px;
+    border-radius: 0;
+    border: 1px solid #000;
+    background-color: #fff;
+    padding: 0 8px;
+}
+
+.popup__button--close {
     font-size: 24px;
     line-height: 70%;
     color: #000000;
@@ -202,15 +224,4 @@ h3 {
     transform: rotate(-45deg);
     border: none;
     background-color: transparent;
-    cursor: pointer;;
 }
-
-.ChatName {
-    height: 28px;
-    width: 196px;
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.189);
-    background-color: #fff;
-    margin-right: 8px;
-    margin: 0px;
-  }
